--- a/ExternalProjects/ItkVtkGlue/Wrapping/CMakeLists.txt
+++ b/ExternalProjects/ItkVtkGlue/Wrapping/CMakeLists.txt
@@ -2,7 +2,7 @@ FIND_PACKAGE(WrapITK REQUIRED)
 
 BEGIN_WRAPPER_LIBRARY(${PROJECT_NAME})
 SET(WRAPPER_SWIG_LIBRARY_FILES ${WRAPPER_SWIG_LIBRARY_FILES} "${CMAKE_CURRENT_SOURCE_DIR}/itkvtk.swg")
-SET(WRAPPER_LIBRARY_DEPENDS ITKCommonA ITKBasicFiltersB)
+SET(WRAPPER_LIBRARY_DEPENDS Base )
 
 WRAPPER_LIBRARY_CREATE_WRAP_FILES()
 WRAPPER_LIBRARY_CREATE_LIBRARY()
