--- a/Tcl/pkgIndex.tcl.in
+++ b/Tcl/pkgIndex.tcl.in
@@ -29,7 +29,7 @@ namespace eval itk {
     # Configure ITK Tcl packages.
     ConfigureTclPackage VXLNumericsTcl     $version
     ConfigureTclPackage ITKNumericsTcl     $version
-    ConfigureTclPackage ITKCommonATcl       $version
+    ConfigureTclPackage BaseTcl       $version
     ConfigureTclPackage ITKCommonBTcl       $version
     ConfigureTclPackage ITKIOTcl           $version
     ConfigureTclPackage ITKBasicFiltersATcl $version
