Divide modules (6 -- bug fix)
darcs-hash:20060423014320-733a7-da88a59961cbd4c1c555d93b321038e8af821709.gz

--- a/ExternalProjects/MultiThreaderControl/CMakeLists.txt
+++ b/ExternalProjects/MultiThreaderControl/CMakeLists.txt
@@ -3,7 +3,7 @@ FIND_PACKAGE(WrapITK REQUIRED)
 
 BEGIN_WRAPPER_LIBRARY("MultiThreaderControl")
 
-SET(WRAPPER_LIBRARY_DEPENDS ITKCommonA)
+SET(WRAPPER_LIBRARY_DEPENDS Base)
 
 SET(WRAPPER_LIBRARY_LINK_LIBRARIES ITKCommon)
 
