--- a/ExternalProjects/PyBuffer/CMakeLists.txt
+++ b/ExternalProjects/PyBuffer/CMakeLists.txt
@@ -9,7 +9,7 @@ INCLUDE_DIRECTORIES( ${PYTHON_NUMARRAY_INCLUDE_DIR} )
 
 BEGIN_WRAPPER_LIBRARY("BufferConversion" Python)
 
-SET(WRAPPER_LIBRARY_DEPENDS ITKCommonA)
+SET(WRAPPER_LIBRARY_DEPENDS Base)
 
 SET(WRAPPER_LIBRARY_LINK_LIBRARIES ITKCommon)
 
