--- a/Python/PyUtils/CMakeLists.txt
+++ b/Python/PyUtils/CMakeLists.txt
@@ -3,7 +3,7 @@
 
 BEGIN_WRAPPER_LIBRARY("ITKPyUtils" Python)
 
-SET(WRAPPER_LIBRARY_DEPENDS ITKCommonA)
+SET(WRAPPER_LIBRARY_DEPENDS Base)
 SET(WRAPPER_LIBRARY_LINK_LIBRARIES ITKCommon)
 
 SET(WRAPPER_LIBRARY_CXX_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/itkPyCommand.cxx") 
