--- a/Modules/Base/CMakeLists.txt
+++ b/Modules/Base/CMakeLists.txt
@@ -21,7 +21,7 @@ SET(WRAPPER_LIBRARY_DEPENDS VXLNumerics)
 SET(WRAPPER_LIBRARY_SWIG_INPUTS "${CMAKE_CURRENT_SOURCE_DIR}/SwigExtras.i") 
 SET(WRAPPER_LIBRARY_CXX_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/itkStringStream.cxx") 
 
-SET(WRAPPER_LIBRARY_LINK_LIBRARIES )
+SET(WRAPPER_LIBRARY_LINK_LIBRARIES ITKCommon ITKNumerics)
 
 WRAPPER_LIBRARY_CREATE_WRAP_FILES()
 
