--- a/Modules/IO/CMakeLists.txt
+++ b/Modules/IO/CMakeLists.txt
@@ -2,7 +2,7 @@ BEGIN_WRAPPER_LIBRARY(IO)
 
 SET(WRAPPER_LIBRARY_DEPENDS Base)
 
-SET(WRAPPER_LIBRARY_LINK_LIBRARIES ITKIO)
+SET(WRAPPER_LIBRARY_LINK_LIBRARIES ITKCommon ITKIO)
 
 WRAPPER_LIBRARY_CREATE_WRAP_FILES()
 WRAPPER_LIBRARY_CREATE_LIBRARY()
