--- a/Modules/SpatialObject/CMakeLists.txt
+++ b/Modules/SpatialObject/CMakeLists.txt
@@ -2,7 +2,7 @@ BEGIN_WRAPPER_LIBRARY(SpatialObject)
 
 SET(WRAPPER_LIBRARY_DEPENDS Base)
 
-SET(WRAPPER_LIBRARY_LINK_LIBRARIES ITKSpatialObject)
+SET(WRAPPER_LIBRARY_LINK_LIBRARIES ITKCommon ITKSpatialObject)
 
 WRAPPER_LIBRARY_CREATE_WRAP_FILES()
 WRAPPER_LIBRARY_CREATE_LIBRARY()
