All link libraries complete
darcs-hash:20060423061328-733a7-2877cec6c80f86184853c4c60ebcd2a15a4f4204.gz

--- a/Modules/SimpleFilters/CMakeLists.txt
+++ b/Modules/SimpleFilters/CMakeLists.txt
@@ -2,7 +2,7 @@ BEGIN_WRAPPER_LIBRARY(SimpleFilters)
 
 SET(WRAPPER_LIBRARY_DEPENDS Base)
 
-SET(WRAPPER_LIBRARY_LINK_LIBRARIES ITKCommon)
+SET(WRAPPER_LIBRARY_LINK_LIBRARIES ITKCommon ITKBasicFilters)
 
 WRAPPER_LIBRARY_CREATE_WRAP_FILES()
 WRAPPER_LIBRARY_CREATE_LIBRARY()
