--- a/Modules/Registration/CMakeLists.txt
+++ b/Modules/Registration/CMakeLists.txt
@@ -2,7 +2,7 @@ BEGIN_WRAPPER_LIBRARY(Registration)
 
 SET(WRAPPER_LIBRARY_DEPENDS Base)
 
-SET(WRAPPER_LIBRARY_LINK_LIBRARIES ITKCommon)
+SET(WRAPPER_LIBRARY_LINK_LIBRARIES ITKCommon ITKNumerics)
 
 WRAPPER_LIBRARY_CREATE_WRAP_FILES()
 WRAPPER_LIBRARY_CREATE_LIBRARY()
