--- a/Modules/SegmentationAndThreshold/CMakeLists.txt
+++ b/Modules/SegmentationAndThreshold/CMakeLists.txt
@@ -2,7 +2,7 @@ BEGIN_WRAPPER_LIBRARY(SegmentationAndThreshold)
 
 SET(WRAPPER_LIBRARY_DEPENDS Base)
 
-SET(WRAPPER_LIBRARY_LINK_LIBRARIES ITKCommon)
+SET(WRAPPER_LIBRARY_LINK_LIBRARIES ITKCommon ITKStatistics ITKAlgorithms)
 
 WRAPPER_LIBRARY_CREATE_WRAP_FILES()
 WRAPPER_LIBRARY_CREATE_LIBRARY()
