--- a/Modules/DeformableTransforms/CMakeLists.txt
+++ b/Modules/DeformableTransforms/CMakeLists.txt
@@ -1,8 +1,8 @@
-BEGIN_WRAPPER_LIBRARY(SpatialObject)
+BEGIN_WRAPPER_LIBRARY(DeformableTransforms)
 
 SET(WRAPPER_LIBRARY_DEPENDS Base)
 
-SET(WRAPPER_LIBRARY_LINK_LIBRARIES ITKCommon ITKSpatialObject)
+SET(WRAPPER_LIBRARY_LINK_LIBRARIES ITKCommon)
 
 WRAPPER_LIBRARY_CREATE_WRAP_FILES()
 WRAPPER_LIBRARY_CREATE_LIBRARY()
