CMakeLists bug fix.
darcs-hash:20060424080152-733a7-c91f452b1218e2daa4ae684afb72cd075efe3671.gz

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -111,7 +111,7 @@ SET(optional_modules
   SimpleFilters
   UnaryPixelMath)
 
-FOREACH(module ${optional_modules}  
+FOREACH(module ${optional_modules})
   OPTION(WRAP_${module} "Build ${module} module." ON)
   MARK_AS_ADVANCED(WRAP_${module})
   IF(WRAP_${optional_module})
