More CMakeLists bug fixes!
darcs-hash:20060424080359-733a7-dd97a68f12a2aaaa549c9fd5466928e6f80fe00a.gz

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -114,7 +114,7 @@ SET(optional_modules
 FOREACH(module ${optional_modules})
   OPTION(WRAP_${module} "Build ${module} module." ON)
   MARK_AS_ADVANCED(WRAP_${module})
-  IF(WRAP_${optional_module})
+  IF(WRAP_${module})
     SET(WRAP_ITK_MODULES ${WRAP_ITK_MODULES} ${module})
   ENDIF(WRAP_${module})
 ENDFOREACH(module)
