--- a/Modules/DeformableTransforms/CMakeLists.txt
+++ b/Modules/DeformableTransforms/CMakeLists.txt
@@ -1,6 +1,6 @@
 BEGIN_WRAPPER_LIBRARY(DeformableTransforms)
 
-SET(WRAPPER_LIBRARY_DEPENDS Base)
+SET(WRAPPER_LIBRARY_DEPENDS Base BaseTransforms)
 
 SET(WRAPPER_LIBRARY_LINK_LIBRARIES ITKCommon)
 
