Fix Tcl loading
darcs-hash:20060426032302-733a7-dd9d8dbd22cc4e0988ea482ed208cf5550e09aed.gz

--- a/Tcl/CMakeLists.txt
+++ b/Tcl/CMakeLists.txt
@@ -40,9 +40,13 @@ SET(WRAP_ITK_SCRIPT_DIR "${CMAKE_INSTALL_PREFIX}/Tcl")
 SET(WRAP_ITK_PACKAGE_DIR "${CMAKE_INSTALL_PREFIX}/Tcl-SWIG")
 SET(WRAP_ITK_DATA_ROOT "${CMAKE_INSTALL_PREFIX}/Data")
 SET(WRAP_ITK_TEST_ROOT "<NO_DEFAULT>")
+SET(CONFIG_TCL_PACKAGES )
+FOREACH(module ${WRAP_ITK_MODULES})
+  SET(CONFIG_TCL_PACKAGES "${CONFIG_TCL_PACKAGES}ConfigureTclPackage ${module}Tcl version\n")
+ENDFOREACH(module)
 CONFIGURE_FILE("${CMAKE_CURRENT_SOURCE_DIR}/pkgIndex.tcl.in"
                "${CMAKE_CURRENT_BINARY_DIR}/InstallOnly/pkgIndex.tcl"
-               IMMEDIATE @ONLY)
+               @ONLY IMMEDIATE)
 INSTALL_FILES("${WRAP_ITK_INSTALL_PREFIX}/Tcl" FILES
               "${CMAKE_CURRENT_BINARY_DIR}/InstallOnly/pkgIndex.tcl")
 
@@ -50,7 +54,53 @@ SET(ITK_TCL_EXE_DIR_BUILD "${ITK_EXECUTABLE_PATH}")
 SET(ITK_TCL_EXE_NAME_ROOT "itkwish")
 
 CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/itkTclConfigure.h.in
-               ${CMAKE_CURRENT_BINARY_DIR}/itkTclConfigure.h)
+               ${CMAKE_CURRENT_BINARY_DIR}/itkTclConfigure.h
+               @ONLY IMMEDIATE)
+
+# Configure itkTclModules.h with the names of the initializer functions for the
+# selected modules. For some pathological reason, the names are in the format:
+# Modulename_Init
+# where the first character is uppercase and the rest of the module name is 
+# lower case. Which will entail some amount of pain to create in CMake.
+SET(module_init_names )
+FOREACH(module ${WRAP_ITK_MODULES})
+  STRING(REGEX REPLACE "^(.)(.+)$" "\\1" first "${module}")
+  STRING(REGEX REPLACE "^(.)(.+)$" "\\2" rest "${module}")
+  STRING(TOUPPER first "${first}")
+  STRING(TOLOWER rest "${rest}")
+  SET(module_init_names ${module_init_names} "${first}${rest}tcl_Init")
+ENDFOREACH(module)
+
+# Now take those init functions and make a list of symbol declarations like:
+# int Modulename_Init(Tcl_Interp*);
+SET(CONFIG_MODULE_INIT_DECLARATIONS )
+FOREACH(module ${module_init_names})
+  SET(CONFIG_MODULE_INIT_DECLARATIONS "${CONFIG_MODULE_INIT_DECLARATIONS}  int ${module}(Tcl_Interp*);\n")
+ENDFOREACH(module_init_names)
+
+# Now we pack the addresses of the init function names into a comma-separated 
+# string, to be used in an array initializer
+SET(initializer )
+FOREACH(module ${module_init_names})
+  SET(initializer "${initializer}  &${module},\n")
+ENDFOREACH(module)
+# Let's trim off that last ',\n':
+STRING(REGEX REPLACE ",\n$" "" CONFIG_MODULE_INIT_ARRAY_INITIALIZER "${initializer}")
+
+# Let's get the number of modules configured. This is an amazing! pain!
+# because there's no list-length function in CMake 2.2. So we use the string
+# length function instead. 
+SET(counter )
+FOREACH(module ${WRAP_ITK_MODULES})
+  SET(counter "${counter}.")
+ENDFOREACH(module)
+STRING(LENGTH "${counter}" CONFIG_MODULE_COUNT)
+
+# And finally configure the file
+CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/itkTclModules.h.in
+               ${CMAKE_CURRENT_BINARY_DIR}/itkTclModules.h
+               @ONLY IMMEDIATE)
+
 
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
 ADD_EXECUTABLE(itkwish itkTclAppInit.cxx)
