--- a/Tcl/itkTclConfigure.h.in
+++ b/Tcl/itkTclConfigure.h.in
@@ -2,12 +2,12 @@
 #define _itkTclConfigure_h
 
 #undef WrapITK_BINARY_DIR
-#define WrapITK_BINARY_DIR "${WrapITK_BINARY_DIR}"
+#define WrapITK_BINARY_DIR "@WrapITK_BINARY_DIR@"
 
 #undef ITK_TCL_EXE_DIR_BUILD
-#define ITK_TCL_EXE_DIR_BUILD "${ITK_TCL_EXE_DIR_BUILD}"
+#define ITK_TCL_EXE_DIR_BUILD "@ITK_TCL_EXE_DIR_BUILD@"
 
 #undef ITK_TCL_EXE_NAME_ROOT
-#define ITK_TCL_EXE_NAME_ROOT "${ITK_TCL_EXE_NAME_ROOT}"
+#define ITK_TCL_EXE_NAME_ROOT "@ITK_TCL_EXE_NAME_ROOT@"
 
 #endif
