Fix CMakeLists bug
darcs-hash:20060426074225-733a7-78de2c6abbf6c431f0fbd82a5f91c06f09569da9.gz

--- a/Tcl/CMakeLists.txt
+++ b/Tcl/CMakeLists.txt
@@ -66,8 +66,8 @@ SET(module_init_names )
 FOREACH(module ${WRAP_ITK_MODULES})
   STRING(REGEX REPLACE "^(.)(.+)$" "\\1" first "${module}")
   STRING(REGEX REPLACE "^(.)(.+)$" "\\2" rest "${module}")
-  STRING(TOUPPER first "${first}")
-  STRING(TOLOWER rest "${rest}")
+  STRING(TOUPPER "${first}" first)
+  STRING(TOLOWER "${rest}" rest)
   SET(module_init_names ${module_init_names} "${first}${rest}tcl_Init")
 ENDFOREACH(module)
 
