Fix SimpleFilters dependencies
darcs-hash:20060426074937-733a7-a437509cd63a80f8a19d13bcf3666cc3a71798ad.gz

--- a/Modules/SimpleFilters/CMakeLists.txt
+++ b/Modules/SimpleFilters/CMakeLists.txt
@@ -1,6 +1,6 @@
 BEGIN_WRAPPER_LIBRARY(SimpleFilters)
 
-SET(WRAPPER_LIBRARY_DEPENDS Base)
+SET(WRAPPER_LIBRARY_DEPENDS Base BaseTransforms)
 
 SET(WRAPPER_LIBRARY_LINK_LIBRARIES ITKCommon ITKBasicFilters)
 
