--- a/Tcl/CMakeLists.txt
+++ b/Tcl/CMakeLists.txt
@@ -42,7 +42,7 @@ SET(WRAP_ITK_DATA_ROOT "${CMAKE_INSTALL_PREFIX}/Data")
 SET(WRAP_ITK_TEST_ROOT "<NO_DEFAULT>")
 SET(CONFIG_TCL_PACKAGES )
 FOREACH(module ${WRAP_ITK_MODULES})
-  SET(CONFIG_TCL_PACKAGES "${CONFIG_TCL_PACKAGES}ConfigureTclPackage ${module}Tcl version\n")
+  SET(CONFIG_TCL_PACKAGES "${CONFIG_TCL_PACKAGES}ConfigureTclPackage ${module}Tcl \$version\n")
 ENDFOREACH(module)
 CONFIGURE_FILE("${CMAKE_CURRENT_SOURCE_DIR}/pkgIndex.tcl.in"
                "${CMAKE_CURRENT_BINARY_DIR}/InstallOnly/pkgIndex.tcl"
