clean dirty stuff caused by change of lib name
darcs-hash:20060427151418-2fc9d-22d7e2dcf1b76c53c8e8eadc38c91439dc92c079.gz

--- a/ExternalProjects/ItkVtkGlue/Wrapping/CMakeLists.txt
+++ b/ExternalProjects/ItkVtkGlue/Wrapping/CMakeLists.txt
@@ -2,29 +2,19 @@ FIND_PACKAGE(WrapITK REQUIRED)
 
 BEGIN_WRAPPER_LIBRARY(${PROJECT_NAME})
 SET(WRAPPER_SWIG_LIBRARY_FILES ${WRAPPER_SWIG_LIBRARY_FILES} "${CMAKE_CURRENT_SOURCE_DIR}/itkvtk.swg")
-SET(WRAPPER_LIBRARY_DEPENDS Base )
+SET(WRAPPER_LIBRARY_DEPENDS Base SimpleFilters)
 
 WRAPPER_LIBRARY_CREATE_WRAP_FILES()
 WRAPPER_LIBRARY_CREATE_LIBRARY()
 
-# find the vtkImagingPython lib
-# use CMAKE_LIBRARY_PATH or -DVTK_IMAGING_PYTHON:PATH=... to give another location
-FIND_LIBRARY(VTK_IMAGING_PYTHON vtkImagingPython
-  /usr/lib/python2.4/site-packages/vtk/
-  /usr/lib/python2.3/site-packages/vtk/
-  /usr/lib/python2.2/site-packages/vtk/
-  /usr/lib/python2.1/site-packages/vtk/
-  /usr/local/lib/python2.4/site-packages/vtk/
-  /usr/local/lib/python2.3/site-packages/vtk/
-  /usr/local/lib/python2.2/site-packages/vtk/
-  /usr/local/lib/python2.1/site-packages/vtk/
-)
-
-MESSAGE(${VTK_IMAGING_PYTHON})
-
 IF(WRAP_ITK_PYTHON)
-  TARGET_LINK_LIBRARIES(_${WRAPPER_LIBRARY_NAME}Python
-                        ${VTK_IMAGING_PYTHON} ITKCommon ITKBasicFilters)
-  WRAP_ITK_INSTALL("/Python" "${CMAKE_CURRENT_SOURCE_DIR}/Python/itkvtk.py")
+  SET(VTK_VERSION "${VTK_MAJOR_VERSION}.${VTK_MINOR_VERSION}.${VTK_BUILD_VERSION}")
+  SET(MIN_ITK_VER "5.0.0")
+  IF("${VTK_VERSION}" STRLESS "${MIN_ITK_VER}")
+    TARGET_LINK_LIBRARIES(_${WRAPPER_LIBRARY_NAME}Python vtkImagingPython ITKCommon ITKBasicFilters)
+  ELSE("${VTK_VERSION}" STRLESS "${MIN_ITK_VER}")
+    TARGET_LINK_LIBRARIES(_${WRAPPER_LIBRARY_NAME}Python vtkImagingPythonD ITKCommon ITKBasicFilters)
+  ENDIF("${VTK_VERSION}" STRLESS "${MIN_ITK_VER}")
+#   WRAP_ITK_INSTALL("/Python" "${CMAKE_CURRENT_SOURCE_DIR}/Python/itkvtk.py")
 ENDIF(WRAP_ITK_PYTHON)
 
