try to fix itkextras directory in build tree on windows
darcs-hash:20060512132047-2fc9d-5e5f76ccc9586f40ab26b4e91c47127e66dd9c34.gz

--- a/Python/CMakeLists.txt
+++ b/Python/CMakeLists.txt
@@ -104,6 +104,9 @@ ELSE ("${WrapITK_BINARY_DIR}" MATCHES "^${WrapITK_SOURCE_DIR}$")
     GET_FILENAME_COMPONENT(path "${file}" PATH)
     INSTALL_FILES("${WRAP_ITK_INSTALL_PREFIX}/Python/${path}" FILES ${install_tgt})
 
+    # create the directory to avoid loosing case on windows
+    FILE(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/${WRAP_ITK_INSTALL_INTDIR}${path})
+
     ADD_CUSTOM_COMMAND(SOURCE ${src}
       COMMAND ${CMAKE_COMMAND}
       ARGS -E copy ${src} ${copy_tgt}
