--- a/Python/Tests/CMakeLists.txt
+++ b/Python/Tests/CMakeLists.txt
@@ -1,6 +1,6 @@
 
 # configure the test driver
-SET(PYTHON_TEST_LIB_PATH "${WrapITK_BINARY_DIR}/bin")
+SET(PYTHON_TEST_LIB_PATH "${WrapITK_BINARY_DIR}/lib")
 SET(PYTHON_TEST_PYTHON_PATH "${WrapITK_BINARY_DIR}/Python")
 FIND_PROGRAM(IMAGE_COMPARE ImageCompare)
 
