fix tcl loading
darcs-hash:20060527200702-2fc9d-c4cc4b492eb57ebd9af195f1532dc44af4f1647c.gz

--- a/Tcl/CMakeLists.txt
+++ b/Tcl/CMakeLists.txt
@@ -23,27 +23,23 @@ SET(WRAP_ITK_SCRIPT_DIR "${CMAKE_CURRENT_SOURCE_DIR}")
 
 IF(CMAKE_CONFIGURATION_TYPES)
   FOREACH(config ${CMAKE_CONFIGURATION_TYPES})
-    SET(WRAP_ITK_PACKAGE_DIR "${ITK_CSWIG_PACKAGE_DIR_BUILD}/${config}")
+    SET(WRAP_ITK_PACKAGE_DIR "${LIBRARY_OUTPUT_PATH}/${config}")
     CONFIGURE_FILE("${CMAKE_CURRENT_SOURCE_DIR}/pkgIndex.tcl.in"
                    "${CMAKE_CURRENT_BINARY_DIR}/${config}/pkgIndex.tcl"
                    @ONLY IMMEDIATE)
   ENDFOREACH(config)
 ELSE(CMAKE_CONFIGURATION_TYPES)
-  SET(WRAP_ITK_PACKAGE_DIR "${ITK_CSWIG_PACKAGE_DIR_BUILD}")
+  SET(WRAP_ITK_PACKAGE_DIR "${LIBRARY_OUTPUT_PATH}")
   CONFIGURE_FILE("${CMAKE_CURRENT_SOURCE_DIR}/pkgIndex.tcl.in"
                  "${CMAKE_CURRENT_BINARY_DIR}/pkgIndex.tcl"
                  @ONLY IMMEDIATE)
 ENDIF(CMAKE_CONFIGURATION_TYPES)
 
 # Configure pkgIndex.tcl for the install tree.
-SET(WRAP_ITK_SCRIPT_DIR "${CMAKE_INSTALL_PREFIX}/Tcl")
-SET(WRAP_ITK_PACKAGE_DIR "${CMAKE_INSTALL_PREFIX}/Tcl-SWIG")
-SET(WRAP_ITK_DATA_ROOT "${CMAKE_INSTALL_PREFIX}/Data")
+SET(WRAP_ITK_SCRIPT_DIR "${CMAKE_INSTALL_PREFIX}/${WRAP_ITK_INSTALL_PREFIX}/Tcl")
+SET(WRAP_ITK_PACKAGE_DIR "${CMAKE_INSTALL_PREFIX}/${WRAP_ITK_INSTALL_PREFIX}/Tcl-SWIG")
+SET(WRAP_ITK_DATA_ROOT "${CMAKE_INSTALL_PREFIX}/${WRAP_ITK_INSTALL_PREFIX}/Data")
 SET(WRAP_ITK_TEST_ROOT "<NO_DEFAULT>")
-SET(CONFIG_TCL_PACKAGES )
-FOREACH(module ${WRAP_ITK_MODULES})
-  SET(CONFIG_TCL_PACKAGES "${CONFIG_TCL_PACKAGES}ConfigureTclPackage ${module}Tcl \$version\n")
-ENDFOREACH(module)
 CONFIGURE_FILE("${CMAKE_CURRENT_SOURCE_DIR}/pkgIndex.tcl.in"
                "${CMAKE_CURRENT_BINARY_DIR}/InstallOnly/pkgIndex.tcl"
                @ONLY IMMEDIATE)
@@ -119,7 +115,10 @@ CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/itkwish.in
 INSTALL_FILES("/bin" FILES ${CMAKE_CURRENT_BINARY_DIR}/InstallOnly/itkwish)
 
 # configure a itkwish usable in build tree
-SET(CONFIG_WRAP_ITK_TCL_DIR "${CMAKE_CURRENT_BINARY_DIR}")
+# use WrapITK_BINARY_DIR instead of the current bianry dir because tcl search pkgIndex.tcl in 
+# the subdirs before searching in the current dir, and so find the pikIndex.tcl file in InstallOnly
+# first
+SET(CONFIG_WRAP_ITK_TCL_DIR "${WrapITK_BINARY_DIR}")
 SET(CONFIG_WRAP_ITK_TCL_SWIG_DIR "${WrapITK_BINARY_DIR}/bin")
 CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/itkwish.in
                ${CMAKE_CURRENT_BINARY_DIR}/itkwish
