fix installed tcl
darcs-hash:20060527231235-2fc9d-0c4550776719b217ec64d6f81251087279f799ac.gz

--- a/Tcl/CMakeLists.txt
+++ b/Tcl/CMakeLists.txt
@@ -37,7 +37,7 @@ ENDIF(CMAKE_CONFIGURATION_TYPES)
 
 # Configure pkgIndex.tcl for the install tree.
 SET(WRAP_ITK_SCRIPT_DIR "${CMAKE_INSTALL_PREFIX}/${WRAP_ITK_INSTALL_PREFIX}/Tcl")
-SET(WRAP_ITK_PACKAGE_DIR "${CMAKE_INSTALL_PREFIX}/${WRAP_ITK_INSTALL_PREFIX}/Tcl-SWIG")
+SET(WRAP_ITK_PACKAGE_DIR "${CMAKE_INSTALL_PREFIX}/${WRAP_ITK_INSTALL_PREFIX}/lib")
 SET(WRAP_ITK_DATA_ROOT "${CMAKE_INSTALL_PREFIX}/${WRAP_ITK_INSTALL_PREFIX}/Data")
 SET(WRAP_ITK_TEST_ROOT "<NO_DEFAULT>")
 CONFIGURE_FILE("${CMAKE_CURRENT_SOURCE_DIR}/pkgIndex.tcl.in"
@@ -108,8 +108,8 @@ TARGET_LINK_LIBRARIES(itkwish ${TCL_LIBRARY} ${TK_LIBRARY})
 
 # configure and install the driver itkwish script
 SET(CONFIG_WRAP_ITK_TCL_DIR "${CMAKE_INSTALL_PREFIX}/${WRAP_ITK_INSTALL_PREFIX}/Tcl")
-SET(CONFIG_WRAP_ITK_TCL_SWIG_DIR "${CMAKE_INSTALL_PREFIX}/${WRAP_ITK_INSTALL_PREFIX}/Tcl-SWIG")
-SET(CONFIG_WRAP_ITK_ITKWISH_DIR "${WrapITK_BINARY_DIR}/Tcl-SWIG")
+SET(CONFIG_WRAP_ITK_TCL_SWIG_DIR "${CMAKE_INSTALL_PREFIX}/${WRAP_ITK_INSTALL_PREFIX}/lib")
+SET(CONFIG_WRAP_ITK_ITKWISH_DIR "${CMAKE_INSTALL_PREFIX}/${WRAP_ITK_INSTALL_PREFIX}/bin")
 CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/itkwish.in
                ${CMAKE_CURRENT_BINARY_DIR}/InstallOnly/itkwish
                @ONLY IMMEDIATE )
