add test for ItkVtkGlue by reusing WrapITK python driver
darcs-hash:20060528152801-2fc9d-579348b4e5292e31da4ed448cf5dbd68900725b4.gz

--- a/ExternalProjects/ItkVtkGlue/CMakeLists.txt
+++ b/ExternalProjects/ItkVtkGlue/CMakeLists.txt
@@ -21,3 +21,5 @@ IF(INSTALL_DEVEL_FILES)
     INSTALL_FILES(/include/InsightToolkit/BasicFilters FILES ${CMAKE_CURRENT_SOURCE_DIR}/src/${f})
   ENDFOREACH(f)
 ENDIF(INSTALL_DEVEL_FILES)
+
+ENABLE_TESTING()
