--- a/ExternalProjects/ItkVtkGlue/Wrapping/CMakeLists.txt
+++ b/ExternalProjects/ItkVtkGlue/Wrapping/CMakeLists.txt
@@ -8,6 +8,7 @@ WRAPPER_LIBRARY_CREATE_WRAP_FILES()
 WRAPPER_LIBRARY_CREATE_LIBRARY()
 
 IF(WRAP_ITK_PYTHON)
+  # I can't manage to put that code in Python subdir :-(
   SET(VTK_VERSION "${VTK_MAJOR_VERSION}.${VTK_MINOR_VERSION}.${VTK_BUILD_VERSION}")
   SET(MIN_ITK_VER "5.0.0")
   IF("${VTK_VERSION}" STRLESS "${MIN_ITK_VER}")
@@ -16,7 +17,6 @@ IF(WRAP_ITK_PYTHON)
     TARGET_LINK_LIBRARIES(_${WRAPPER_LIBRARY_NAME}Python vtkImagingPythonD ITKCommon ITKBasicFilters)
   ENDIF("${VTK_VERSION}" STRLESS "${MIN_ITK_VER}")
 
-  # will be removed in the future
-  WRAP_ITK_INSTALL("/Python" "${CMAKE_CURRENT_SOURCE_DIR}/Python/itkvtk.py")
+  SUBDIRS(Python)
 ENDIF(WRAP_ITK_PYTHON)
 
