--- a/Modules/LevelSet/CMakeLists.txt
+++ b/Modules/LevelSet/CMakeLists.txt
@@ -1,6 +1,6 @@
 BEGIN_WRAPPER_LIBRARY(LevelSet)
 
-SET(WRAPPER_LIBRARY_DEPENDS Base)
+SET(WRAPPER_LIBRARY_DEPENDS Base BaseNumerics)
 
 SET(WRAPPER_LIBRARY_LINK_LIBRARIES ITKCommon)
 
