more tests from the old wrapping system
darcs-hash:20060605021149-2fc9d-6a37cbc9865585920e5e43e20531cca9a90c47e4.gz

--- a/Python/Tests/CMakeLists.txt
+++ b/Python/Tests/CMakeLists.txt
@@ -14,6 +14,10 @@ WRAP_ITK_INSTALL("/Configuration/Python/Tests" "${CMAKE_CURRENT_SOURCE_DIR}/pyth
 
 SET(PYTHON "${PYTHON_EXECUTABLE}" "${CMAKE_CURRENT_BINARY_DIR}/pythonTestDriver.py")
 
+ADD_TEST(PythonTestDirectory ${PYTHON} ${CMAKE_CURRENT_SOURCE_DIR}/TestDirectory.py)
+
+ADD_TEST(PythonTestObject ${PYTHON} ${CMAKE_CURRENT_SOURCE_DIR}/TestObject.py)
+
 # some tests will fail if dim=2 and unsigned short are not wrapped
 INTERSECTION(WRAP_2 2 "${WRAP_ITK_DIMS}")
 IF(WRAP_unsigned_short AND WRAP_2)
