fix itkwish installation path
darcs-hash:20060613144334-2fc9d-d451d78a7219490596434c488aea71be8ace4220.gz

--- a/Tcl/CMakeLists.txt
+++ b/Tcl/CMakeLists.txt
@@ -128,5 +128,5 @@ CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/itkwish.in
 
 
 #install the actual executable
-INSTALL_TARGETS("${WRAP_ITK_INSTALL_PREFIX}/Tcl-SWIG" itkwish)
+INSTALL_TARGETS("${WRAP_ITK_INSTALL_PREFIX}/bin" itkwish)
 INSTALL_FILES("${WRAP_ITK_INSTALL_PREFIX}/Tcl" .tcl itkinteraction itktesting itkdata itkutils)
